// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Hero should be defined 1`] = `
<section
  className="anchor-hero sc-gipzik fqnMqj"
/>
`;

exports[`Component: Hero should render with custom content 1`] = `
<section
  className="anchor-hero sc-gipzik fqnMqj"
>
  <h1
    className="anchor-typography anchor-hero-title sc-csuQGl jAXjpX sc-caSCKo jgTECj"
    scale={32}
  >
    Good Ole Title
  </h1>
  <span
    className="anchor-typography sc-gisBJw bGdbKe"
  >
    Some Typography text
  </span>
  <button
    className="anchor-button sc-gqjmRU jfRbTD"
    size="large"
  >
    CTA
  </button>
</section>
`;

exports[`Component: Hero should render with title 1`] = `
<section
  className="anchor-hero sc-gipzik fqnMqj"
>
  <h1
    className="anchor-typography anchor-hero-title sc-csuQGl jAXjpX sc-dVhcbM jMfNJo"
    scale={32}
  >
    Hero Title
  </h1>
</section>
`;

exports[`Component: Hero should render with title and subtitle 1`] = `
<section
  className="anchor-hero sc-gipzik fqnMqj"
>
  <h1
    className="anchor-typography anchor-hero-title sc-csuQGl jAXjpX sc-eqIVtm eeazzE"
    scale={32}
  >
    Hero Title
  </h1>
  <span
    className="anchor-typography anchor-hero-subtitle sc-Rmtcm KPeEa sc-fAjcbJ dBoqIT"
    scale={18}
  >
    Hero Subtitle
  </span>
</section>
`;
